# lft

./: .dockerignore  .env.example  .gitignore  .travis.yml  .~lock.backtest_bars_AAPL.csv#  BUGFIX_2026-01-13.md  BUILD.md  CMakeLists.txt  ISSUES.md  ISSUES_REVIEW.md  METRICS.md  Makefile  PROJECT_STATUS.md  README.md  REGRESSION_ANALYSIS.md  TESTING.md  TEST_TUI.md  TRADING_LOG.md  TUI_COMPLETE.md  TUI_DESIGN.md  TUI_INTEGRATION.md  TUI_README.md  VPS_DEPLOYMENT.md  _config.yml  all_orders.csv  analyze_strategies.sh  analyze_win_rate_by_strategy.sh  analyze_win_rates.py  backtest_exit_params.sh  build-gcc.sh  fetch_5min_bars.sh  fetch_orders.sh  lft_stats_2026-01-08_21-56-14.920077.csv  lft_stats_2026-01-08_23-17-39.836072.csv  lft_stats_2026-01-09_01-38-39.861178.csv  lft_stats_2026-01-09_03-27-19.377921.csv  lft_stats_2026-01-09_04-57-57.432605.csv  lft_stats_2026-01-09_07-19-54.552268.csv  lft_stats_2026-01-09_09-22-33.279794.csv  lft_stats_2026-01-09_10-38-57.574886.csv  (+15 more)
.claude/: CLAUDE.md
.github/workflows/: test.yml
docs/: breakfast_breakout_trading_strategy_5_minute_bars.md  out_of_hours_price_updates.md  strategy_review_next_step_recommendations.md
include/: alpaca_client.h  bps_utils.h  defs.h  exit_logic_tests.h  lessons_learned.md  lft.h  strategies.h
include/shared/: alpaca_client.h  exit_logic_tests.h  strategies.h
scripts/: fetch_orders.sh
src/: account.cxx  alpaca_client.cxx  calibrate.cxx  check_entries.cxx  check_exits.cxx  evaluate.cxx  evaluate_entries.cxx  globals.cxx  lft.cxx  lft_v2.cxx  liquidate.cxx  main.cxx  phases.cxx  strategies.cxx  summary.cxx  thread_poc.cxx  tui.cxx  tui.hxx  tui_demo.cxx
src/backtest/: backtest.cxx
src/manual/: positions.cxx  ticker.cxx
src/shared/: alpaca_client.cxx  strategies.cxx
tests/: CMakeLists.txt  exit_logic_tests.h  test_phases.cxx  test_trading_logic.cxx
